[gd_scene load_steps=2 format=3 uid="uid://death_screen"]

[ext_resource type="Script" path="res://death_screen.gd" id="1_death"]

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource("1_death")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "OYUN BİTTİ!"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Skor: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Yeniden Başla"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Çıkış"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 48
font_color = Color(1, 0, 0, 1) 